--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,16 @@ after_sucess:
     - docker push fwborges/multi-server
     - docker push fwborges/multi-worker
 
+deploy:
+    edge: true
+    provider: elasticbeanstalk
+    region: "us-east-1"
+    app: "multi-docker"
+    env: "MultiDocker-env"
+    bucket_name: "elasticbeanstalk-us-east-1-152534237884"
+    bucket_path: "docker-multi"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+
